--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:security": "jest tests/security",
+    "security:validate": "node scripts/validate-security.js",
+    "mcp:start": "node scripts/start-mcp.js",
+    "mcp:dev": "node scripts/start-mcp.js -- --dev",
+    "mcp:prod": "node scripts/start-mcp.js -- --prod",
+    "mcp:inspect": "mcp-inspector-cli mcp/config.json",
+    "setup:complete": "node scripts/setup-complete.js",
+    "setup:quick": "npm run security:validate && npm run test:security && echo '✅ Sinoman SuperApp setup completed successfully!'",
+    "setup:generate-secrets": "node scripts/setup-complete.js -- --generate-only"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -18,6 +30,7 @@
     "@supabase/supabase-js": "^2.57.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
@@ -28,14 +41,21 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@modelcontextprotocol/sdk": "^1.17.5",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "node-mocks-http": "^1.13.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
